kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - "dumlping-store24.ru"
      secretName: letsencrypt-secret
  rules:
    - host: "dumlping-store24.ru"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
